# open-cu-services-sdk

./: .editorconfig  .editorconfig-checker.json  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .spectral.yaml  .yamllint.yaml  AI_POLICY.md  AI_POLICY.ru.md  CODEOWNERS  CONTRIBUTING.md  CONTRIBUTING.ru.md  LICENSE  Makefile  README.md  README.ru.md  SECURITY.md
.github/: dependabot.yml
dart/: README.md
examples/python/: README.md  pyproject.toml  requirements.txt
examples/python/current_student/: main.py
golang/: .gitignore  (+2 more)
python/lmsapi/: README.md  openapi-python-client-config.yml  pyproject.toml
python/lmsapi/open_cu_services_lmsapi/: __init__.py  defaults.py
python/lmsapi/open_cu_services_lmsapi/api/courses/: course_overview_by_id.py  course_summary_by_id.py  course_theme_summary_by_id.py  list_student_courses.py  longread_materials_by_id.py  longread_summary_by_id.py
python/lmsapi/open_cu_services_lmsapi/api/student/: current_student.py
python/lmsapi/open_cu_services_lmsapi/api/tasks/: generate_content_download_link.py  task_by_id.py
python/lmsapi/open_cu_services_lmsapi/models/: __init__.py  activity_definition.py  base_bad_request_error.py  base_bad_request_error_errors.py  base_forbidden_error.py  base_not_found_error.py  base_problem_error.py  base_unauthorized_error.py  course_category.py  course_category_cover.py  course_overview_by_id_response.py  course_settings.py  course_skill_level.py  course_summary_item.py  course_theme_item.py  course_theme_summary_by_id_response.py  current_student_response.py  exercise_item.py  exercise_questions_settings.py  file_media_type.py  generate_content_download_link_response.py  list_student_courses_response.py  longread_audio_material_item.py  longread_exercise_coding_material_item.py  longread_exercise_input_question_item.py  longread_exercise_input_question_item_type.py  longread_exercise_multiple_choice_question_item.py  longread_exercise_multiple_choice_question_item_multiple_choice.py  longread_exercise_multiple_choice_question_item_type.py  longread_exercise_questions_material_item.py  longread_exercise_questions_mode.py  longread_exercise_single_choice_questionitem.py  longread_exercise_single_choice_questionitem_single_choice.py  longread_exercise_single_choice_questionitem_type.py  longread_file_material_item.py  longread_image_material_item.py  longread_item.py  longread_markdown_material_item.py  longread_material_activity.py  longread_material_attachment_item.py  (+49 more)
(+94 files in other folders)
